# md2pdf

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  ROADMAP.md  md2pdf.toml.example  mkdocs.yml  overview.md  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: Demo_Video_Script.md  included_feature.md  index.md  plugin-authoring.md  showcase.md  themes.md  user-guide.md  user_manual.md
docs/javascripts/: mathjax.js
examples/academic_paper/: paper.md
examples/business_invoice/: invoice.md  md2pdf.toml
examples/project_roadmap/: md2pdf.toml  roadmap.md
examples/simple_cv/: cv.md  md2pdf.toml
md2pdf/: __init__.py  cli.py
md2pdf/assets/: __init__.py  _font_registry.py  cache.py  fallback.py  kroki.py
md2pdf/core/: __init__.py  config.py  errors.py  flowables.py  layout.py  parser.py  pipeline.py  plugin_loader.py  postprocessors.py  preprocessors.py  registry.py  styles.py  tokens.py  validator.py
md2pdf/handlers/: __init__.py  admonition.py  blockquote.py  code.py  heading.py  inline.py  latex.py  list_.py  mermaid.py  pagebreak.py  paragraph.py  table.py  thematic_break.py
md2pdf/styles/: __init__.py  default.py  theme.py
plans/: README.md  phase-1-foundation.md  phase-2-parser.md  phase-3-handlers.md  phase-4-assets.md  phase-5-plugins.md  phase-6-layout.md  phase-7-cli.md  phase-8-testing.md
scripts/: benchmark.py  build_docs.py
scripts/benchmark_inputs/: large.md  medium.md  simple.md
scripts/benchmark_outputs/: benchmark_results.json  benchmark_results.md
tests/: conftest.py  test_assets.py  test_cli.py  test_cli_extended.py  test_cli_watch.py  test_config.py  test_cover.py  test_deterministic.py  test_emoji.py  test_encoding.py  test_font_validation.py  test_footnotes.py  test_handlers.py  test_header.py  test_image_caption.py  test_latex_extended.py  test_layout.py  test_matplotlib_math.py  test_metadata.py  test_page_config.py  test_parser.py  test_pipeline.py  test_plugin_loader.py  test_progress.py  test_registry.py  test_regression.py  test_review_fixes.py  test_strikethrough_highlight.py  test_superscript_subscript.py  test_table_alignment.py  test_theme.py  test_toc.py  test_validator.py
tests/fixtures/: diagrams.md  front_matter.md  mixed.md  regression_mixed.md  simple.md  tables.md
