[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md2pdf"
version = "0.1.0"
description = "Automated programmatic Markdown-to-PDF typesetting engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "reportlab>=4.0",
    "mistletoe>=1.3",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "typer>=0.12",
]

[project.scripts]
md2pdf = "md2pdf.cli:app"

# Built-in handlers are declared here (Phase 3).
# Third-party plugins declare their own entries in their own pyproject.toml.
[project.entry-points."md2pdf.handlers"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: marks tests that make real HTTP calls (deselect with -m 'not network')",
]
addopts = "-v --tb=short -m 'not network'"

[tool.hatch.build.targets.wheel]
packages = ["md2pdf"]
