[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymd2pdf"
version = "0.5.3"
description = "Convert Markdown to PDF in pure Python; no Pandoc, Node.js, or headless Chrome required"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = [
    "reportlab>=4.0",
    "mistletoe>=1.3",
    "requests>=2.31",
    "typer>=0.12",
    "pillow>=10.0.0",
    "pygments>=2.17.0",
    "charset-normalizer>=3.0.0",
]

[project.optional-dependencies]
matplotlib = [
    "matplotlib>=3.8",
]


[project.scripts]
md2pdf = "md2pdf.cli:app"

# Built-in handlers are declared here
# Third-party plugins declare their own entries in their own pyproject.toml.
[project.entry-points."md2pdf.handlers"]
Heading       = "md2pdf.handlers.heading:HeadingHandler"
Paragraph     = "md2pdf.handlers.paragraph:ParagraphHandler"
List          = "md2pdf.handlers.list_:ListHandler"
BlockQuote    = "md2pdf.handlers.blockquote:BlockQuoteHandler"
Table         = "md2pdf.handlers.table:TableHandler"
ThematicBreak = "md2pdf.handlers.thematic_break:ThematicBreakHandler"
Mermaid       = "md2pdf.handlers.mermaid:MermaidHandler"
LatexBlock    = "md2pdf.handlers.latex:LatexHandler"
CodeFence     = "md2pdf.handlers.code:CodeFenceHandler"
BlockCode     = "md2pdf.handlers.code:BlockCodeHandler"
Admonition    = "md2pdf.handlers.admonition:AdmonitionHandler"
PageBreak     = "md2pdf.handlers.pagebreak:PageBreakHandler"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "black>=24",
    "ruff>=0.4",
    "pre-commit>=4.0",
    "pypdf>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: marks tests that make real HTTP calls (deselect with -m 'not network')",
    "matplotlib: marks tests that require the matplotlib optional dependency",
]
addopts = "-v --tb=short -m 'not network and not matplotlib'"

[tool.hatch.build.targets.wheel]
packages = ["md2pdf"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long — handled by black
]

[tool.ruff.lint.isort]
known-first-party = ["md2pdf"]
